Fixed the build for JDK 17